# sdk

./: .gitignore  CMakeLists.txt
dbuild/: CMakeLists.txt  README.md
dbuild/lib/: sdk-common.sh
dbuild/lib/dbuild/: functions.sh  users
dbuild/lib/dbuild/actions/: build-image.sh  build-rootfs.sh  chroot.sh
dbuild/lib/dbuild/configs/: aarch64-chroot  common  common-chroot  host-chroot  pinephone  x86_64-chroot  x86_64-pc  x86_64-pc-efi
dbuild/lib/dbuild/repo-keys/: 6f:b0:2b:01:e7:b8:f5:79:6a:2f:af:e5:86:f3:54:8e.plist
lib/: sdk-common.sh
